--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="console"></div>
-    <img id="img" crossorigin src="JlUvsxa.jpg" width="227" height="227"/>
+    <img id="img" crossorigin src="../JlUvsxa.jpg" width="227" height="227"/>
     <!-- get input -->
       <video
         style="display: block; padding-bottom: 10px"
@@ -25,6 +25,6 @@
       <button id="class-b">Add animals</button>
       <button id="class-c">Add object</button>
     <!-- Load index.js after the content of the page -->
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
