--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     </div>
    
   </div>
+
+  <a href="index1.html">Dataset tensor page</a>
     <!-- Load index.js after the content of the page -->
     <script src="./js/index.js"></script>
   </body>
